--- a/package.json
+++ b/package.json
@@ -9,5 +9,13 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "@vitejs/plugin-vue": "^4.3.4",
+        "jquery": "^3.7.1",
+        "vue": "^3.2.36",
+        "vue-axios": "^3.5.2",
+        "vue-router": "^4.2.4"
     }
 }
