--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "@vitejs/plugin-vue": "^4.3.4",
+        "@vitejs/plugin-vue": "^4.4.0",
+        "datatables.net-dt": "^1.13.6",
         "jquery": "^3.7.1",
         "vue": "^3.2.36",
         "vue-axios": "^3.5.2",
-        "vue-router": "^4.2.4"
+        "vue-router": "^4.2.4",
+        "vuejs-paginate-next": "^1.0.2"
     }
 }
